fix: titles animations, hide logo on mobile, change partners logos sizes

--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -430,9 +430,7 @@
         overflow: visible;
     }
     .logo {
-        position: fixed;
-        left: 20px;
-        top: 20px;
+        display: none;
     }
     section .container {
         padding: 50px 20px;
@@ -442,6 +440,12 @@
 }
 
 @media (max-width: 575px) {
+    .lead__partners-list li {
+        max-width: 60px;
+        img {
+            width: 100%;
+        }
+    }
     .hero {
         position: relative;
         &__inner {
